--- a/services.html
+++ b/services.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <!-- Logo icon size is 376-266 94-66.5 -->
+    <!-- Logo icon size is 376-266 -->
     <div>
       <img src="./Images(Fenn)/edits/logo-gray.jpeg" alt="Fenn Construction Logo" class="center">
     </div>
